# RiscZero-zktracer

./: question.md
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: constants.rs  main.rs  math.rs  primitive.rs
